build create post functions

--- a/src/components/Timeline/PostModal/PostModal.css
+++ b/src/components/Timeline/PostModal/PostModal.css
@@ -85,8 +85,10 @@ display: flex;
 
 .postModel__postIcon:hover{
   cursor: pointer;
+  color: gray;
 }
 
 .postModal__footerLikes:hover{
   cursor: pointer;
+  color: gray;
 }
