--- a/src/components/Timeline/posts/Post.css
+++ b/src/components/Timeline/posts/Post.css
@@ -31,9 +31,6 @@
   border: 0.6px solid rgba(128, 128, 128, 0.516)
 }
 
-.post__footer{
-
-}
 
 .post__footerIcons{
   display: flex;
@@ -44,6 +41,7 @@
 
 .post__footerLikes:hover{
   cursor: pointer;
+  color: gray;
 }
 
 .postIcon{
@@ -53,6 +51,7 @@
 
 .postIcon:hover{
   cursor: pointer;
+  color: gray;
 }
 
 .avatar{
