--- a/src/components/Navigation/Sidenav.css
+++ b/src/components/Navigation/Sidenav.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   z-index: 1;
+  width: inherit;
 }
 
 .sidenav__logo{
@@ -19,6 +20,7 @@
   position: fixed;
   display: flex;
   flex-direction: column;
+  width: inherit;
 }
 
 .sidenav__button{
